[package]
name = "ckzg-mainnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c-kzg = {path = "../ckzg-sys", features = ["mainnet-spec"]}

[build-dependencies]
c-kzg = {path = "../ckzg-sys", features = ["mainnet-spec"]}
